[package]
name = "tower-github-webhook"
version = "0.1.2"
edition = "2021"
authors = ["Sebastian Rollén <seb@rollen.io>"]
license = "MIT"
repository = "https://github.com/SebRollen/tower-github-webhook"
description = "tower-github-webhook is a crate that simplifies validating webhooks received from GitHub "
keywords = ["tower", "layer", "service", "github", "webhook"]
categories = ["authentication", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
hex = "0.4.3"
hmac = "0.12.1"
http = "1.0.0"
http-body = "1.0.0"
pin-project = "1.1.3"
sha2 = "0.10.8"
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.40"

[dev-dependencies]
axum = { version = "0.7.4", features = ["macros"] }
http-body-util = "0.1.0"
hyper = "1.1.0"
octocrab = "0.33.3"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
